examples/expected/check_invalid_array_mixed.txt
error[E2001]: type mismatch: expected I64, got Bool
  --> examples/invalid_array_mixed.tp:2:16
   |
 2 |   let xs = [1, true];
   |                ^^^^
